@@ -26,6 +26,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   asmyers
   Lukas Barth
   Paul J. Fenwick
+  Michael Neumann
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
